assets/css/style.css
/* COLORS MATCHED TO HEADER IMAGE */

html, body {
    color: #515151;
    background: #cfc8b8;
    font-family:"Courier New", Courier, monospace;
    
    /*
    position: relative;
    */
    /* min-height: 100%;*/
}

.bodyContainer {
    min-height: 100%;
}

.pure-g [class *="pure-u"] {
    font-family:"Courier New", Courier, monospace;
}

.pure-img-responsive {
    max-width: 100%;
    height: auto;
}

a:link {
    color: #cd6e77;
}

a:visited {
    color: #763f44;
}

a:active, a:hover {
    color: #ef1428;
}


/*
Add transition to containers so they can push in and out.
*/

#main {
    overflow:auto;
    padding-bottom: 50px;
}  /* must be same height as the footer */

.pushdown {
    position: relative;
    clear:both;
}

.footer {
    position: absolute;
    margin-top: -50px; /* negative value of footer height */
    margin-left: 160px;
    margin-right:4em;
    height: 50px;
    width: 100%;
    bottom : 0;
    left: 0;
    clear: both;

    text-align: left;
} 

#layout,
#menu,
.menu-link {
    -webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    -ms-transition: all 0.2s ease-out;
    -o-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out;
}

/*
This is the parent `<div>` that contains the menu and the content area.
*/
#layout {
    position: relative;
    padding-left: 0;
    min-height: 100%;
}
    #layout.active {
        position: relative;
        left: 150px;
    }
        #layout.active #menu {
            left: 150px;
            width: 150px;
        }

        #layout.active .menu-link {
            left: 150px;
        }
/*
The content `<div>` is where all your content goes.
*/
.content {
    margin: 0 auto;
    padding: 0 2em;
    max-width: 1120px;
    margin-bottom: 50px;
    line-height: 1.6em;
}

.header {
     margin: 0;
     color: #333;
     text-align: center;
     padding: 2.5em 2em 0;
     border-bottom: 0px solid #101010;
 }
    .header h1 {
        margin: 0.2em 0;
        font-size: 3em;
        font-weight: 300;
    }
     .header h2 {
        font-weight: 300;
        color: #ccc;
        padding: 0;
        margin-top: 0;
    }

.content-subhead {
    margin: 50px 0 10px 0;
    font-weight: 300;
    color: #aaa;
}

.headingRed {
    color: #ef1428;
}


/*
The `#menu` `<div>` is the parent `<div>` that contains the `.pure-menu` that
appears on the left side of the page.
*/

#menu {
    margin-left: -150px; /* "#menu" width */
    width: 150px;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    z-index: 1000; /* so the menu or its navicon stays above all content */
    background: #;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
    /*padding-top: 250px;*/
}
    /*
    All anchors inside the menu should be styled like this.
    */
    #menu a {
        color: #999;
        border: none;
        padding: 0.6em 0 0.6em 0.6em;
    }

    /*
    Remove all background/borders, since we are applying them to #menu.
    */
     #menu .pure-menu,
     #menu .pure-menu ul {
        border: none;
        background: transparent;
    }

    /*
    Add that light border to separate items into groups.
    */
    #menu .pure-menu ul,
    #menu .pure-menu .menu-item-divided {
        border-top: 0px solid #000;
    }
        /*
        Change color of the anchor links on hover/focus.
        */
        #menu .pure-menu li a:hover,
        #menu .pure-menu li a:focus {
            background: #333;
            border-top-right-radius:14px;
            border-bottom-right-radius:14px;
        }

    /*
    This styles the selected menu item `<li>`.
    */
    #menu .pure-menu-heading {
        /*background: #000;*/
        background: #515151;
        border-top-right-radius:14px;
        border-bottom-right-radius:14px;
    }

        #menu a.pure-menu-heading:hover,
        #menu a.pure-menu-heading:focus {
            background: #333;
            border-top-right-radius:14px;
            border-bottom-right-radius:14px;
        }


    #menu .pure-menu-selected {
        background: #444;
    }
        /*
        This styles a link within a selected menu item `<li>`.
        */
        #menu .pure-menu-selected a {
            color: #fff;
        }

    /*
    This styles the menu heading.
    */
    #menu .pure-menu-heading {
        font-size: 110%;
        color: #fff;
        margin: 0;
        text-transform: none;
    }



/* -- Dynamic Button For Responsive Menu -------------------------------------*/

/*
The button to open/close the Menu is custom-made and not part of Pure. Here's
how it works:
*/

/*
`.menu-link` represents the responsive menu toggle that shows/hides on
small screens.
*/
.menu-link {
    position: fixed;
    display: block; /* show this only on small screens */
    top: 0;
    left: 0; /* "#menu width" */
    background: #000;
    background: rgba(0,0,0,0.7);
    font-size: 10px; /* change this value to increase/decrease button size */
    z-index: 10;
    width: 2em;
    height: auto;
    padding: 2.1em 1.6em;
}

    .menu-link:hover,
    .menu-link:focus {
        background: #000;
    }

    .menu-link span {
        position: relative;
        display: block;
    }

    .menu-link span,
    .menu-link span:before,
    .menu-link span:after {
        background-color: #fff;
        width: 100%;
        height: 0.2em;
    }

        .menu-link span:before,
        .menu-link span:after {
            position: absolute;
            margin-top: -0.6em;
            content: " ";
        }

        .menu-link span:after {
            margin-top: 0.6em;
        }


.tables-container {
    text-align: center;
}

.strikethrough td {
    text-decoration: line-through;
}

.listing-table {
    font-size: .9em;
    /*table-layout:fixed;*/
}
    .long-column {
        max-width:300px;
        text-align: left;
    }

    .spacer-column {
        min-width: 700px;
    }

.side-table {
    font-size: .8em;
    /*max-width: 300px;*/
}

.pure-table {
    border-width: 0px;
    margin: auto;
}

.pure-table thead {
    background: #101010;
    color: #ccc;
    text-align: left;
    vertical-align: bottom;
    border-bottom: 1px solid #ccc;
}

.button-table {
    color: white;
    border-radius: 10px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    background: rgb(200, 28, 30);
    margin-bottom: 10px;
    width: 18em;
    vertical-align: middle;
}

.button-normal {
    border-radius: 10px;
    color: #101010;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    margin-bottom: 10px;
    width: 12em; 
    vertical-align: middle;
}

.button-small {
    border-radius: 4px;
    color: #101010;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    text-decoration: none;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left:5px;
    padding-right:5px;
    vertical-align: middle;
}

a.copyr {
    color: #444;
    display: block;
    padding-top: 5px;
    padding-left: 20px;
    
    font-size: .6em;
}

    a:link.copyr { 
        color: #444;
        text-decoration:none;
    }
    a:visited.copyr {
        color: #444;
        text-decoration:none;
    }
    a:hover.copyr { 
        color: #777; 
    }


/* -- Responsive Styles (Media Queries) ------------------------------------- */

/*
Hides the menu at `48em`, but modify this based on your app's needs.
*/
@media (min-width: 48em) {

    .header,
    .content {
        padding-left: 2em;
        padding-right: 2em;
    }

    #layout {
        padding-left: 150px; /* left col width "#menu" */
        left: 0;
    }
    #menu {
        left: 150px;
        padding-top: 140px;
    }

    .menu-link {
        position: fixed;
        left: 150px;
        display: none;
    }

    #layout.active .menu-link {
        left: 150px;
    }
}

